modificION INDEX BANDERAS

--- a/index_e.html
+++ b/index_e.html
@@ -111,13 +111,17 @@
     <!--
     Header Navigation Area
     -->
+   
+    <div>
+  <div class="container">
     <div class="textAlignRight">
             <i class="fa-solid fa-flag"></i>
             <a href="index.html">Español</a>
             <i class="fa-solid fa-flag-usa"></i>
             <a href="index_e.html">English</a>
         </div>
-    
+    </div>
+        </section>
         <!-- Place your logo here -->
         <div class="logo posTopLeft">
             <a href="index.html" class="menu_link"><img src="images/logo.png" alt="logo text"></a>
@@ -140,10 +144,10 @@
                         <nav class="headerFixed_content">
                             <ul class="nav">
                                 <!--  Add require site page navigation -->
-                                <li><a href="index.html" class="first active">Nosotros</a></li>
-                                <li><a href="rentademaquinaria.html">Galería</a></li>
-                                <li><a href="programas sociales.html" class="first active">Programas sociales</a></li>
-                                <li><a href="contactus.html" class="last"> Contacto</a></li>
+                                <li><a href="index.html" class="first active">Us</a></li>
+                                <li><a href="rentademaquinaria.html">Gallery</a></li>
+                                <li><a href="programas sociales.html" class="first active">Social programs</a></li>
+                                <li><a href="contactus.html" class="last"> Contact</a></li>
                             </ul>
                         </nav>
 
@@ -174,14 +178,8 @@
 
             <div class="autoHideMenu"></div>
 
-            <nav class="fixedMenu fixedPos onlyTop fadeBgOnTop bgTransparent closeIt">
-                <div class="topBackground"> </div>
-            </nav>
-
 
             <div class="mainContent">
-
-             
 
 
 
@@ -222,8 +220,8 @@
                                             <h2 class="white_color bold_weight">Flores de la sierra mágica de Puebla
                                             </h2>
                                             <hr class="separator_mini">
-                                            <h4 class="white_color light_weight font_medium_x letterSpacing">Rosas con
-                                                calidad de exportación</h4>
+                                            <h4 class="white_color light_weight font_medium_x letterSpacing">
+                                                Roses with exportation quality</h4>
                                             <hr class="separator_mini">
 
                                         </div>
@@ -241,10 +239,9 @@
                                             <hr class="separator_max">
                                             <hr class="space_mini">
                                             <hr class="mobile_spacing">
-                                            <h2 class="white_color bold_weight">Tenemos más de 15 variedades</h2>
+                                            <h2 class="white_color bold_weight">We have more than 15 varieties</h2>
                                             <hr class="separator_mini">
-                                            <h4 class="white_color light_weight font_medium_x letterSpacing"> Listas
-                                                para adornar tu momento especial</h4>
+                                            <h4 class="white_color light_weight font_medium_x letterSpacing"> To decorate your special moment</h4>
                                             <hr class="separator_mini">
 
                                         </div>
@@ -264,11 +261,10 @@
                                             <hr class="separator_max">
                                             <hr class="space_mini">
                                             <hr class="mobile_spacing">
-                                            <h2 class="white_color bold_weight">Contamos con altos estándares de calidad
+                                            <h2 class="white_color bold_weight">We have high quality standards
                                             </h2>
                                             <hr class="separator_mini">
-                                            <h4 class="white_color light_weight font_medium_x letterSpacing"> Estrictos
-                                                procedimientos en cultivo y poscosecha
+                                            <h4 class="white_color light_weight font_medium_x letterSpacing"> Strict cultivation and postharvest procedures
                                             </h4>
                                             <hr class="separator_mini">
 
@@ -290,15 +286,15 @@
                                     <div class="col-lg-12">
                                         <div class="page_header text-center">
                                             <h4 class="mini_heading font_small dark letterSpacing center">
-                                                Acerca de nosotros
+                                                About us
 
                                             </h4>
                                             <h5
                                                 class="pad_large_xx font_small onlyHigDevice light_weight padTop_0 padBot_0">
                                                 <span class="pad_large">
-                                                    Producimos rosas con calidad de exportación en 15 distintas variedades para 
-                                                    satisfacer las diferentes necesidades en color de cada uno de nuestros clientes,
-                                                    esta es la más alta prioridad para FSMP.
+                                                    We produce export quality roses in 15 different varieties
+                                                    for satisfy the different color needs of each of our clients,
+                                                    this is the highest priority for FSMP
                                                 </span>
                                             </h5>
                                             <hr>
@@ -316,8 +312,8 @@
 
                                         <!-- Tab navigation -->
                                         <ul class="nav nav-tabs bottomBorder">
-                                            <li class="active"><a href="#tab1" data-toggle="tab">Misión</a></li>
-                                            <li><a href="#tab2" data-toggle="tab">Visión</a></li>
+                                            <li class="active"><a href="#tab1" data-toggle="tab">Mision</a></li>
+                                            <li><a href="#tab2" data-toggle="tab">Vision</a></li>
                                         </ul>
 
                                         <!-- Tab content -->
@@ -333,13 +329,13 @@
                                                             <i class="fa-solid fa-flower-tulip"></i></i></i>
                                                         </span>
                                                         <div class="desc">
-                                                            <p>Cubrir con producción especial, las fechas importantes en
-                                                                México y EUA. Conservando la misma calidad del resto del
-                                                                año.</p>
-                                                            <p> Tener las opciones de empaquetamiento y envió que cada
-                                                                cliente solicita de manera especial.</p>
-                                                            <p>Siempre estar a tiempo en las entregas de flor, en las
-                                                                condiciones que pida en cliente. </p>
+                                                            <p>Cover with special production, important dates in
+                                                                Mexico and USA. Maintaining the same quality as the rest of the
+                                                                year.</p>
+                                                            <p> Have the packaging and shipping options that each
+                                                                client requests in a special way.</p>
+                                                            <p>Always be on time in flower deliveries, in
+                                                                conditions requested by the client. </p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -354,10 +350,10 @@
                                                             <i class="fas fa-hand-holding-seedling"></i>
                                                         </span>
                                                         <div class="desc">
-                                                            <p>En FSMP la consolidación a nivel nacional e internacional de cada
-                                                                uno de nuestros productos, así como de nuestra marca, con innovaciones en
-                                                                el cultivo y procesamiento de rosas. Es de vital importancia para poder generar
-                                                                una real diferencia en cada uno de nuestros tallos. 
+                                                            <p>In FSMP the consolidation at national and international level of each
+                                                                one of our products, as well as our brand, with innovations in
+                                                                the cultivation and processing of roses. It is vitally important to be able to generate
+                                                                a real difference in each of our stems.
                                                              </p>
                                                         </div>
                                                     </div>
