--- a/index.html
+++ b/index.html
@@ -265,10 +265,14 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="page_header text-center">
+                                            <i class="fa-solid fa-flag"></i>
+                                            <a href="index.html">Español</a>
+                                            <i class="fa-solid fa-flag-usa"></i>
+                                            <a href="index_e.html">English</a>
+                                        </div>
+                                        <div class="page_header text-center">
                                             <h4 class="mini_heading font_small dark letterSpacing center">
-                                                Acerca de nosotros
-
-                                            </h4>
+                                                Acerca de nosotros </h4>
                                             <h5
                                                 class="pad_large_xx font_small onlyHigDevice light_weight padTop_0 padBot_0">
                                                 <span class="pad_large">
