--- a/index_e.html
+++ b/index_e.html
@@ -130,10 +130,10 @@
                         <nav class="headerFixed_content">
                             <ul class="nav">
                                 <!--  Add require site page navigation -->
-                                <li><a href="index.html" class="first active">Us</a></li>
-                                <li><a href="rentademaquinaria.html">Gallery</a></li>
-                                <li><a href="programas sociales.html" class="first active">Social programs</a></li>
-                                <li><a href="contactus.html" class="last"> Contact</a></li>
+                                <li><a href="index_e.html" class="first active">Us</a></li>
+                                <li><a href="rentademaquinaria_en.html">Gallery</a></li>
+                                <li><a href="programas sociales_en.html" class="first active">Social programs</a></li>
+                                <li><a href="contactus_en.html" class="last"> Contact</a></li>
                             </ul>
                         </nav>
 
@@ -270,6 +270,12 @@
 
                                 <div class="row">
                                     <div class="col-lg-12">
+                                        <div class="page_header text-center">
+                                            <i class="fa-solid fa-flag"></i>
+                                            <a href="index.html">Español</a>
+                                            <i class="fa-solid fa-flag-usa"></i>
+                                            <a href="index_e.html">English</a>
+                                        </div>
                                         <div class="page_header text-center">
                                             <h4 class="mini_heading font_small dark letterSpacing center">
                                                 About us
