--- a/programas sociales_en.html
+++ b/programas sociales_en.html
@@ -28,6 +28,7 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    
 
     <!-- Included CSS files 
 	================================================== -->
@@ -132,10 +133,10 @@
                         <nav class="headerFixed_content">
                             <ul class="nav">
                                 <!--  Add require site page navigation -->
-                                <li><a href="index.html" class="first active">Nosotros</a></li>
-                                <li><a href="rentademaquinaria.html">Galería</a></li>
-                                <li><a href="programas sociales.html" class="first active">Programas sociales</a></li>
-                                <li><a href="contactus.html" class="last"> Contacto</a></li>
+                                <li><a href="index_e.html" class="first active">Us</a></li>
+                                <li><a href="rentademaquinaria_en.html">Gallery</a></li>
+                                <li><a href="programas sociales_en.html" class="first active">Social programs</a></li>
+                                <li><a href="contactus_en.html" class="last"> Contact</a></li>
                             </ul>
                         </nav>
 
@@ -314,6 +315,10 @@
                                 <a href="https://www.facebook.com/profile.php?id=100010983242581" target="_blank"
                                     title="Facebook"><span class="icon fa fa-facebook"></span></a>
                             </ul>
+                            <div class="container-fluid top_bot_pad">
+                                <a href="index.html">Español</a>
+                                <a href="index_e.html">English</a>
+                            </div>
                         </div>
                     </div>
                 </div>
