--- a/rentademaquinaria_en.html
+++ b/rentademaquinaria_en.html
@@ -153,10 +153,10 @@
   <nav class="header_content">
       <ul class="nav smartMenu ">
           <!--  Add require site page navigation -->                    
-          <li><a href="index.html" class="first active">Nosotros</a></li>
-                 <li><a href="rentademaquinaria.html">Galería</a></li>
-                    <li><a href="programas sociales.html" class="first active">Programas sociales</a></li>
-                  <li><a href="contactus.html" class="last"> Contacto</a></li>                                 
+          <li><a href="index_e.html" class="first active">Us</a></li>
+                                <li><a href="rentademaquinaria_en.html">Gallery</a></li>
+                                <li><a href="programas sociales_en.html" class="first active">Social programs</a></li>
+                                <li><a href="contactus_en.html" class="last"> Contact</a></li>                               
       </ul>
   </nav>  
   
@@ -868,6 +868,10 @@
                             <ul class="font_awesome addFxEmbossBtn noBorder alignCenter">
                                 <a href="https://www.facebook.com/profile.php?id=100010983242581" target="_blank" title="Facebook"><span class="icon fa fa-facebook"></span></a>
                             </ul>
+                            <div class="container-fluid top_bot_pad">
+                              <a href="index.html">Español</a>
+                              <a href="index_e.html">English</a>
+                          </div>
                 </div>                  
           </div>            
       </div>
