--- a/rentademaquinaria.html
+++ b/rentademaquinaria.html
@@ -868,6 +868,10 @@
                             <ul class="font_awesome addFxEmbossBtn noBorder alignCenter">
                                 <a href="https://www.facebook.com/profile.php?id=100010983242581" target="_blank" title="Facebook"><span class="icon fa fa-facebook"></span></a>
                             </ul>
+                            <div class="container-fluid top_bot_pad">
+                              <a href="index.html">Español</a>
+                              <a href="index_e.html">English</a>
+                          </div>
                 </div>                  
           </div>            
       </div>
