logo a index ingles

--- a/contactus_en.html
+++ b/contactus_en.html
@@ -135,7 +135,7 @@ Header Navigation Area
 
     <!-- Place your logo here -->
     <div class="logo posTopLeft">
-        <a href="index.html" class="smoothPageLoad"><img src="images/logo.png" alt="logo text"></a>
+        <a href="index_e.html" class="smoothPageLoad"><img src="images/logo.png" alt="logo text"></a>
     </div>
 
     <!--<div class="mobile_menu_btn">  </div>-->
