--- a/programas sociales_en.html
+++ b/programas sociales_en.html
@@ -116,7 +116,7 @@
         </section>
         <!-- Place your logo here -->
         <div class="logo posTopLeft">
-            <a href="index.html" class="menu_link"><img src="images/logo.png" alt="logo text"></a>
+            <a href="index_e.html" class="menu_link"><img src="images/logo.png" alt="logo text"></a>
         </div>
 
 
