--- a/index_e.html
+++ b/index_e.html
@@ -113,7 +113,7 @@
     -->
         <!-- Place your logo here -->
         <div class="logo posTopLeft">
-            <a href="index.html" class="menu_link"><img src="images/logo.png" alt="logo text"></a>
+            <a href="index_e.html" class="menu_link"><img src="images/logo.png" alt="logo text"></a>
         </div>
 
 
