--- a/contactus_en.html
+++ b/contactus_en.html
@@ -202,59 +202,37 @@ If you need this button just remove the comment code
         <div class="mainContent">
 
 
-            <!-- About us -->
-
-
-
-            <div class="contentWrapper backGround parallax lightBackground imgSwp_preview"
-                data-src="images/background/image1.jpg" data-src-small="images/background/image1_s.jpg">
-
-                <div class="relativePos pageContent homeImgSlider fullHeight fullResponse ">
-                    <div class="home_slider_title1 sliderStyle1 textAlignCenter">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-12 ">
-                                    <div class="top_txt">
-
-                                        </div>
-
-
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-
 
             <div class="contentWrapper">
 
-                <div class="pageContent addPageBorder">
+                <div class="owlSlider owl-carousel owl-theme owlSingleSlider navDotted navSmall"
+                        data-owlAutoplay="yes">
 
-                    <div class="container" data-animated-time="0" data-animated-in="animated fadeInUp"
-                        data-animated-innerContent="yes" data-anchor-to="parent.parent">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="page_header noBorder text-center">
-                                    <h4 class="mini_heading font_small dark letterSpacing center">
-                                        Contáctanos
+                        <div class="item">
+                            <div class="full-width fullWidthSlider parallax darkBackground"
+                                data-src="images/background/image8.jpg"
+                                data-src-small="images/background/image8_s.jpg">
+                                <div class="container ">
+                                    <div class="row">
+                                        <div class="col-lg-12 textAlignCenter">
+                                            <hr class="separator_max">
+                                            <hr class="space_mini">
+                                            <hr class="mobile_spacing">
+                                            <h2 class="white_color bold_weight">Contáctanos
+                                            </h2>
+                                            <hr class="separator_mini">
+                                            <h4 class="white_color light_weight font_medium_x letterSpacing">Estamos para servirte</h4>
+                                            <hr class="separator_mini">
 
-                                    </h4>
-                                    <h5 class="pad_large_xx font_small onlyHigDevice light_weight padTop_0 padBot_0">
-                                        <span class="pad_large padBot_0">
-
-                                        </span>
-                                    </h5>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                
+
+                <div class="pageContent addPageBorder">
 
 
                     <div class="container">
