modificacion de ingles

--- a/contactus_en.html
+++ b/contactus_en.html
@@ -218,10 +218,10 @@ If you need this button just remove the comment code
                                             <hr class="separator_max">
                                             <hr class="space_mini">
                                             <hr class="mobile_spacing">
-                                            <h2 class="white_color bold_weight">Contáctanos
+                                            <h2 class="white_color bold_weight">Contact us
                                             </h2>
                                             <hr class="separator_mini">
-                                            <h4 class="white_color light_weight font_medium_x letterSpacing">Estamos para servirte</h4>
+                                            <h4 class="white_color light_weight font_medium_x letterSpacing">We're here to serve you</h4>
                                             <hr class="separator_mini">
 
                                         </div>
@@ -266,9 +266,9 @@ If you need this button just remove the comment code
                                     <span class="icon"><i class="icon-basic-mail-open"></i></span>
                                     <h5>Email</h5>
                                     <h5 class="light_weight"><a>ventas@floressierramagica.com</a></h5>
-                                    <a href="mailto:ventas@floressierramagica.com">Enviar correo</a>
+                                    <a href="mailto:ventas@floressierramagica.com">Send-Email</a>
 <h5 class="light_weight"><a>floressierramagica@gmail.com</a></h5>
-<a href="mailto:floressierramagica@gmail.com">Enviar correo</a>
+<a href="mailto:floressierramagica@gmail.com">Send-Email</a>
 
                                 </div>
                                
@@ -307,7 +307,7 @@ If you need this button just remove the comment code
                             </figure>
                             <hr class="separator_mini">
 
-                            <h5 class="light_weight tiny_font"> Copyright © 2024 Flores de la Sierra Mágica de Puebla- Todos los derechos reservados. </h5>
+                            <h5 class="light_weight tiny_font"> Copyright © 2024 Flores de la Sierra Mágica de Puebla- All rights reserved. </h5>
                             <hr class="separator_mini">
                             <ul class="font_awesome addFxEmbossBtn noBorder alignCenter">
                                 <a href="https://www.facebook.com/profile.php?id=100010983242581" target="_blank" title="Facebook"><span class="icon fa fa-facebook"></span></a>
