--- a/programas sociales_en.html
+++ b/programas sociales_en.html
@@ -199,12 +199,12 @@
                                             <hr class="separator_max">
                                             <hr class="space_mini">
                                             <hr class="mobile_spacing">
-                                            <h2 class="white_color bold_weight">En FSMP es de vital importancia cuidar no solo el medio
-                                                ambiente con reforestaciones y ascesoramientos para el cuidado y tratado del agua. 
+                                            <h2 class="white_color bold_weight">At FSMP it is vitally important to take care not only of the environment
+                                                environment with reforestation and advice for the care and treatment of water.
                                             </h2>
                                             <hr class="separator_mini">
-                                            <h4 class="white_color light_weight font_medium_x letterSpacing">Apoyamos a la población que nos rodea, no solo con empleo, también
-                                                nos preocupamos por su bienestar y el de sus familias, por ello:</h4>
+                                            <h4 class="white_color light_weight font_medium_x letterSpacing">We support the population around us, not only with employment, but also
+                                                We care about your well-being and that of your families, therefore:</h4>
                                             <hr class="separator_mini">
 
                                         </div>
@@ -232,7 +232,7 @@
                                         data-animated-innerContent="yes" data-anchor-to="parent.parent">
                                         <div class="col-lg-12">
                                             <div class="page_header textAlignCenter">
-                                                <h4 class="font_medium">Implementamos programas sociales</h4>
+                                                <h4 class="font_medium">We implement social programs</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -241,26 +241,26 @@
 
                                         <div class="col-lg-4 services_list2 ">
                                         <div class="desc">
-                                                <h5>Programas</h5>
-                                                <p>Hemos tomado acciones como la implementación de programas de vacunación, asesorías en el cuidado de salud física y mental,
-                                                    consientes de que la buena salud de las personas se refleja en su trabajo.
-                                                </p>
+                                            <h5>Programs</h5>
+                                            <p>We have taken actions such as the implementation of vaccination programs, advice on physical and mental health care,
+                                                aware that people's good health is reflected in their work.
+                                            </p>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-4 services_list2">
                                            <div class="desc">
-                                                <h5 class="bold_weight">Especiales</h5>
-                                                <p>También contamos con programas especiales para emplear a madres solteras, personas de edad avanzada y jóvenes con
-                                                    capacidades diferentes, donde desarrollan actividades seguras para cada uno de ellos.
+                                                <h5 class="bold_weight">Specials</h5>
+                                                <p>We also have special programs to employ single mothers, elderly people and young people with disabilities.
+                                                    different capacities, where they develop safe activities for each of them.
                                                  </p>
                                             </div>
                                         </div>
                                         <div class="col-lg-4 services_list2">
                                         <div class="desc">
-                                                <h5 class="bold_weight">Comunidad</h5>
-                                                <p>Otro de nuestros compromisos es el mantenimiento de camiones, donde con maquinaria y personal se apoya para reparar y mejorar caminos de terracería, logrando un
-                                                     beneficio para los pobladores de la comunidad donde nos localizamos.
+                                                <h5 class="bold_weight">Community</h5>
+                                                <p>Another of our commitments is truck maintenance, where machinery and personnel are supported to repair and improve dirt roads, achieving a
+                                                     benefit for the residents of the community where we are located.
                                                  </p>
                                             </div>
                                         </div>
@@ -308,7 +308,7 @@
                             <hr class="separator_mini">
 
                             <h5 class="light_weight tiny_font"> Copyright © 2024 Flores de la Sierra Mágica de Puebla
-                                Todos los derechos reservados. </h5>
+                                All rights reserved. </h5>
                             <a>floressierramagica@gmail.com</a></h6>
                             <hr class="separator_mini">
                             <ul class="font_awesome addFxEmbossBtn noBorder alignCenter">
