--- a/rentademaquinaria_en.html
+++ b/rentademaquinaria_en.html
@@ -19,7 +19,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Galería</title>
+	<title>Gallery</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -863,7 +863,7 @@
                     </figure>
                     <hr class="separator_mini">
                     
-                    <h5 class="light_weight tiny_font"> Copyright © 2024 Flores de la Sierra Mágica de Puebla- Todos los derechos reservados. </h5>
+                    <h5 class="light_weight tiny_font"> Copyright © 2024 Flores de la Sierra Mágica de Puebla- All rights reserved. </h5>
                             <hr class="separator_mini">
                             <ul class="font_awesome addFxEmbossBtn noBorder alignCenter">
                                 <a href="https://www.facebook.com/profile.php?id=100010983242581" target="_blank" title="Facebook"><span class="icon fa fa-facebook"></span></a>
